# thealchemist

./: LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml  setup.cfg  setup.py
the_alchemist/: example_ingredient_app.py  main.py  settings.py  workbench.py
the_alchemist/ingredients/: __init__.py  base_ingredient.py  example_app.py  herb.py  ingredient.py  ingredient_factory.py  mappings.py  service.py  settings.py
the_alchemist/ingredients/db/: herbs.json  mappings.py
the_alchemist/ingredients/factory/: ingredient_factory.py
the_alchemist/ingredients/models/: base_ingredient.py  herb.py  ingredient.py
the_alchemist/ingredients/repositories/: base_repository.py  herb_json_repository.py  json_repository.py
the_alchemist/ingredients/tests/: conftest.py  test_herb_json_repository.py  test_ingredient_factory.py  test_ingredient_service.py
the_alchemist/procedures/: base_procedure.py  simple_procedure.py
the_alchemist/products/: __init__.py  base_product.py  mappings.py  mixture.py  product_factory.py
the_alchemist/recipes/: service.py
the_alchemist/recipes/db/: mappings.py  recipes.json
the_alchemist/recipes/factory/: recipe_factory.py
the_alchemist/recipes/models/: __init__.py  base_recipe.py  feature_based_recipe.py  specific_ingredients_recipe.py
the_alchemist/recipes/repositories/: base_json_recipe_repository.py  base_repository.py  recipe_json_repository.py
the_alchemist/recipes/tests/: conftest.py  test_recipe_factory.py  test_recipe_json_repository.py  test_recipe_service.py
the_alchemist/tests/: conftest.py
the_alchemist/tests/workbench/: test_base_workbench.py  test_workbench_factory.py
the_alchemist/tools/: base_tool.py  simple_tool.py  tool_factory.py
the_alchemist/workbench/: alchemy_workbench.py  base_procedure.py  base_workbench.py  workbench.py  workbench_factory.py
