[tool.poetry]
package-mode = false

[project]
name = "thealchemist"
version = "0.1.0"
description = "Simple alchemy engine for games and applications"
authors = [
    {name = "angon1",email = "kubabak@gmail.com"}
]
license = {text = "BSD-2-Clause"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.9.4,<14.0.0",
    "pydantic>=2.10.6,<3.0.0",
    "pydantic-settings>=2.9.1,<3.0.0",
]

[project.optional-dependencies]
testing = [
    "pytest>=8.3.5,<9.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
# ...existing code...

[tool.pytest.ini_options]
pythonpath = [
  ".", "the_alchemist",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
