[metadata]
name = thealchemist
version = 0.1.0
description = A simple alchemy engine for games and applications
long_description = file: README.md
long_description_content_type = text/markdown
author = Kuba Bąk
author_email = kubabak@gmail.com
license = BSD-2-Clause
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries

[options]
packages = find:
package_dir =
    the_alchemist = the_alchemist
python_requires = >=3.12
install_requires =
    rich>=13.9.4,<14.0.0
    pydantic>=2.10.6,<3.0.0
    pydantic-settings>=2.9.1,<3.0.0

[options.package_data]
* = *.json

[options.extras_require]
dev =
    pytest>=8.3.5,<9.0.0
    pytest-mock>=3.14.0,<4.0.0
    pytest-cov>=6.0.0,<7.0.0
    black>=25.1.0,<26.0.0
    isort>=6.0.1,<7.0.0
    ruff>=0.11.0,<0.12.0
